src/objects/Family__c.object
<CustomObject>
    <description>SFDC1-131: This object holds Family related to Products</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-7599 -Response Management - Missing Related Product Famliy</description>
        <inlineHelpText>Please select Case.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Product Families</relationshipLabel>
        <relationshipName>ProductFamilies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FamilyNumber__c</fullName>
        <description>SFDC1-6246 Product Family Number [SAP ID] for the Product Family. Populated via SAP integration.</description>
        <externalId>true</externalId>
        <label>Product Family Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-2445 : Legacy ID field for Family Object</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDFamily__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Fam{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Family</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5469 Lookup to Product Group table.</description>
        <inlineHelpText>Lookup to Product Group table.</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipName>Families</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>SFDC1-5469 To set if the active/inactive status of family record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Family</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>